# dinner-party

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  scripts.hs  spago.dhall  tailwind.config.js
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
src/: Annealing.purs  Main.purs
