[package]
name = "dinner-party"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "dinner_party"
path = "src/lib.rs"

[target.'cfg(target_arch = "wasm32")']
rustflags = ["--cfg", "getrandom_backend=wasm_js"]

[dependencies]
argmin = { version = "0.10.0", features = ["rayon"] }
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
rand = "0.9.0"
wasm-bindgen = "0.2.100"
